# internship-library-management

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py
backend/api/: dependencies.py  exception_handlers.py  main.py
backend/api/exceptions/: exception_handlers.py
backend/api/routers/: auth.py  books.py  health.py  loans.py  members.py  users.py
backend/auth/: dependencies.py  jwt.py
backend/background_tasks/: __init__.py  audit.py
backend/cli/: books.py  dependencies.py  loans.py  main.py  members.py
backend/exceptions/: __init__.py  book_exceptions.py  loan_exceptions.py  member_exceptions.py  user_exceptions.py
backend/repositories/: book_repository.py  loan_repository.py  member_repository.py  user_repository.py
backend/schemas/: __init__.py  auth.py  book.py  loan.py  member.py
backend/services/: auth_service.py  book_service.py  loan_service.py  member_service.py  user_service.py
database/: base.py  connection.py  session.py  test_connection.py
database/migrations/: env.py
database/migrations/versions/: 8a2a86c39ebe_add_users_table.py  c7b026c8adda_initial_schema.py
database/models/: __init__.py  book.py  enums.py  loan.py  member.py  user.py
docker/: api.Dockerfile  cli.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  setupTests.js
frontend/src/api/: auth.js  books.js  client.js  loans.js  members.js  users.js
frontend/src/components/: LoadingSpinner.jsx
frontend/src/components/books/: BookCard.jsx  BookFormModal.jsx  BookGrid.jsx  BookSearch.jsx  BooksSkeleton.jsx  DeleteBookModal.jsx  EmptyBooks.jsx
frontend/src/components/layout/: Navbar.jsx  Sidebar.jsx
frontend/src/components/loans/: BorrowModal.jsx  DeleteLoanModal.jsx  EmptyLoans.jsx  LoanCard.jsx  LoanGrid.jsx  LoansSkeleton.jsx  ReturnConfirmation.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useBooks.js  useLoans.js  useMembers.js  useUsers.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: AccessDenied.jsx  BookDetailsPage.jsx  BooksPage.jsx  DashboardPage.jsx  HomePage.jsx  LoansPage.jsx  LoginPage.jsx  MemberDetailsPage.jsx  MembersPage.jsx  NotFound.jsx  RegisterPage.jsx  UsersPage.jsx
frontend/src/routes/: AppRoutes.jsx  ProtectedRoute.jsx  RoleRoute.jsx
frontend/src/services/: authService.js  bookService.js  loanService.js  memberService.js  userService.js
frontend/src/tests/: DashboardPage.test.jsx  Navbar.test.jsx  ProtectedRoute.test.jsx  RoleRoute.test.jsx  UsersPage.test.jsx
frontend/src/utils/: authEvents.js  constants.js  helpers.js  storage.js
tests/: conftest.py  test_auth.py  test_background_tasks.py  test_books.py  test_loans.py  test_members.py  test_system.py  test_users.py
tests/factories/: book_factory.py  loan_factory.py  member_factory.py  user_factory.py
(+12 files in other folders)
