[project]
name = "library-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.116.1",
    "psycopg2-binary==2.9.12",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.51",
    "typer==0.16.1",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
