[project]
name = "library-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.5",
    "email-validator>=2.3.0",
    "fastapi==0.116.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "psycopg2-binary==2.9.12",
    "psycopg[binary]==3.3.4",
    "pwdlib>=0.3.0",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy==2.0.51",
    "typer==0.16.1",
    "uvicorn==0.35.0",
    "pydantic-settings==2.11.0",
    "PyJWT==2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
